# DX7SoloAudition

./: .gitignore  CMakeLists.txt  README.md
compat/: arm_math.cpp  arm_math.h
src/: AudioRtBackend.cpp  AudioRtBackend.h  DX7Engine.cpp  DX7Engine.h  MidiRtBackend.cpp  MidiRtBackend.h  main.cpp
